# otus-cpp-prof-temp-for-mapreduce

./: CMakeLists.txt  Doxyfile  README  annotated.html  classClient-members.html  classClient.html  classClient__coll__graph.md5  classClient__inherit__graph.map  classCreateConnection-members.html  classCreateConnection.html  classLibSSH2-members.html  classLibSSH2.html  classLogger-members.html  classLogger.html  classMainNode-members.html  classMainNode.html  classMainNode__coll__graph.md5  classMainNode__inherit__graph.map  classMapReduce-members.html  classMapReduce.html  classMapReduce__coll__graph.map  classMapReduce__coll__graph.md5  classNode-members.html  classNode.html  classNode__inherit__graph.map  classNode__inherit__graph.md5  classSession-members.html  classSession.html  classSshConnection-members.html  classSshConnection.html  classThreadPool-members.html  classThreadPool.html  classThreadPool__inherit__graph.map  classThreadPool__inherit__graph.md5  classWorkerNode-members.html  classWorkerNode.html  classWorkerNode__coll__graph.md5  classWorkerNode__inherit__graph.map  classes.html  client_8cpp.html  (+114 more)
include/: client.h  create_connection.h  logger.h  main_node.h  mapreduce.h  node.h  server.h  ssh.h  thread_pool.h  utils.h  worker_node.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  (+36 more)
(+8 files in other folders)
